--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -64,7 +64,7 @@ SFR:
 
 # HTC
 HTC:
-  regex: 'HTC|Sprint (?:APA|ATP)|ADR(?!910L)[a-z0-9]+|NexusHD2|Amaze[ _]4G[);/ ]|(Desire|Sensation|Evo ?3D|IncredibleS|Wildfire|Butterfly)[ _]?([^;/)]+)(?: Build|\))|(Amaze[ _]4G|One ?[XELSV\+]+)[);/ ]|SPV E6[05]0|(One M8|X525a|PG86100|PC36100|XV6975|PJ83100|2PYB2|2PZC5|0PJA10|0PJA2|HTV33|0PM92|0PCV1|601HT)[);/ ]'
+  regex: 'HTC|Sprint (?:APA|ATP)|ADR(?!910L)[a-z0-9]+|NexusHD2|Amaze[ _]4G[);/ ]|(Desire|Sensation|Evo ?3D|IncredibleS|Wildfire|Butterfly)[ _]?([^;/)]+)(?: Build|\))|(Amaze[ _]4G|One ?[XELSV\+]+)[);/ ]|SPV E6[05]0|(One M8|X525a|PG86100|PC36100|XV6975|PJ83100|2PYB2|2PZC5|0PJA10|0PJA2|HTV33|0PM92|0PCV1|601HT|0PAJ5)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -144,6 +144,8 @@ HTC:
       model: '$1'
     - regex: '(One M8)'
       model: '$1'
+    - regex: '0PAJ5[);/ ]'
+      model: 'One E8'
 
 # microsoft
 Microsoft:
@@ -2695,299 +2697,304 @@ bq:
       model: 'Practic'
     - regex: 'BQ-6001L|BQ-6050'
       model: 'Jumbo'
-    - regex: 'BQ-5707G'
+    - regex: 'BQ-5707G[);/ ]'
       model: 'Next Music'
-    - regex: 'BQ-5702'
+    - regex: 'BQ-5702[);/ ]'
       model: 'Spring'
-    - regex: 'BQ-5700L'
+    - regex: 'BQ-5700L[);/ ]'
       model: 'Space X'
-    - regex: 'BQ-5594'
+    - regex: 'BQ-5594[);/ ]'
       model: 'Strike Power Max'
-    - regex: 'BQ-(5591|5518G)'
+    - regex: 'BQ-(?:5591|5518G)[);/ ]'
       model: 'Jeans'
     - regex: 'BQ-5522'
       model: 'Next'
-    - regex: 'BQ(ru)?-5521'
+    - regex: 'BQ(?:ru)?-5521[);/ ]'
       model: 'Strike Power Max'
-    - regex: 'BQ-5520L'
+    - regex: 'BQ-5520L[);/ ]'
       model: 'Silk'
-    - regex: 'BQ-5519L'
+    - regex: 'BQ-5519L[);/ ]'
       model: 'Fast Plus'
-    - regex: 'BQ-5517L'
+    - regex: 'BQ-5517L[);/ ]'
       model: 'Twin Pro'
-    - regex: 'BQ-5516L'
+    - regex: 'BQ-5516L[);/ ]'
       model: 'Twin'
-    - regex: 'BQS-5515'
+    - regex: 'BQS-5515[);/ ]'
       model: 'Wide'
-    - regex: 'BQ-5515(L)?'
+    - regex: 'BQ-5515[L]?[);/ ]'
       model: 'Fast'
-    - regex: 'BQ-5512L|BQ-5528L'
+    - regex: 'BQ-(?:5512L|5528L)[);/ ]'
       model: 'Strike Forward'
-    - regex: 'BQ-5511L'
+    - regex: 'BQ-5511L[);/ ]'
       model: 'Bliss'
-    - regex: 'BQS[_ ]5505'
+    - regex: 'BQS[_ ]5505[);/ ]'
       model: 'Amsterdam'
-    - regex: 'BQ(ru)?-5510'
+    - regex: 'BQ(?:ru)?-5510[);/ ]'
       model: 'Strike Power Max 4G'
-    - regex: 'BQ-5508L'
+    - regex: 'BQ-5508L[);/ ]'
       model: 'Next LTE'
-    - regex: 'BQ-5507L'
+    - regex: 'BQ-5507L[);/ ]'
       model: 'Iron Max'
-    - regex: 'BQ(ru)?-5504'
+    - regex: 'BQ(?:ru)?-5504[);/ ]'
       model: 'Strike Selfie Max'
-    - regex: 'BQ(ru)?-5503'
+    - regex: 'BQ(?:ru)?-5503[);/ ]'
       model: 'Nice 2'
-    - regex: 'BQS-5502'
+    - regex: 'BQS-5502[);/ ]'
       model: 'Hammer'
-    - regex: 'BQS-5501'
+    - regex: 'BQS-5501[);/ ]'
       model: 'Kawasaki'
-    - regex: 'BQS-5500'
+    - regex: 'BQS-5500[);/ ]'
       model: 'Vancouver'
-    - regex: 'BQ-5500L'
+    - regex: 'BQ-5500L[);/ ]'
       model: 'Advance'
-    - regex: 'BQ-5302G'
+    - regex: 'BQ-5302G[);/ ]'
       model: 'Velvet 2'
-    - regex: 'BQ-5301'
+    - regex: 'BQ-5301[);/ ]'
       model: 'Strike View'
-    - regex: 'BQ-5300G'
+    - regex: 'BQ-5300G[);/ ]'
       model: 'Velvet View'
-    - regex: 'BQ(ru)?-5211|BQS-5020'
+    - regex: 'BQ(ru|S)?-(?:5211|5020)[);/ ]'
       model: 'Strike'
-    - regex: 'BQ-5206L'
+    - regex: 'BQ-5206L[);/ ]'
       model: 'Balance'
-    - regex: 'BQ(ru)?-5204|BQS-5050'
+    - regex: 'BQ(?:ru|S)?-(?:5204|5050)[);/ ]'
       model: 'Strike Selfie'
-    - regex: 'BQ(ru)?-5203'
+    - regex: 'BQ(?:ru)?-5203[);/ ]'
       model: 'Vision'
-    - regex: 'BQ(ru)?-5202'
+    - regex: 'BQ(?:ru)?-5202[);/ ]'
       model: 'Space Lite'
-    - regex: 'BQ(ru)?-5201'
+    - regex: 'BQ(?:ru)?-5201[);/ ]'
       model: 'Space'
-    - regex: 'BQ-5082'
+    - regex: 'BQ-5082[);/ ]'
       model: 'Sense 2'
-    - regex: 'BQ-5071'
+    - regex: 'BQ-5071[);/ ]'
       model: 'Belief'
-    - regex: 'BQS-5065|BQ-5340'
+    - regex: 'BQ[S]?-(?:5065|5340)[);/ ]'
       model: 'Choice'
-    - regex: 'BQ(ru)?-5059|BQ-5514G'
+    - regex: 'BQ(?:ru)?-(?:5059|5514G)[);/ ]'
       model: 'Strike Power'
-    - regex: 'BQ-5058'
+    - regex: 'BQ-5058[);/ ]'
       model: 'Strike Power Easy'
-    - regex: 'BQ(ru)?-5057'
+    - regex: 'BQ(?:ru)?-5057[);/ ]'
       model: 'Strike 2'
-    - regex: 'BQ-5056|BQS-5030'
+    - regex: 'BQ[S]?-(?:5056|5030)[);/ ]'
       model: 'Fresh'
-    - regex: 'BQ-6042l'
+    - regex: 'BQ-6042l[);/ ]'
       model: 'Magic E'
-    - regex: 'BQS-5055'
+    - regex: 'BQS-5055[);/ ]'
       model: 'Turbo Plus'
-    - regex: 'BQ(ru)?-5054'
+    - regex: 'BQ(?:ru)?-5054[);/ ]'
       model: 'Crystal'
-    - regex: 'BQ-5052'
+    - regex: 'BQ-5052[);/ ]'
       model: 'Sense'
-    - regex: 'BQ(S)?-5045'
+    - regex: 'BQ[S]?-5045[);/ ]'
       model: 'Fast'
-    - regex: 'BQ(ru)?-5037|BQ-5514L'
+    - regex: 'BQ(?:ru)?-(?:5037|5514L)[);/ ]'
       model: 'Strike Power 4G'
-    - regex: 'BQ(ru)?-5035'
+    - regex: 'BQ(?:ru)?-5035[);/ ]'
       model: 'Velvet'
-    - regex: 'BQ(ru)?-5033'
+    - regex: 'BQ(?:ru)?-5033[);/ ]'
       model: 'Shark'
-    - regex: 'BQ-5032'
+    - regex: 'BQ-5032[);/ ]'
       model: 'Element'
-    - regex: 'BQS-5025'
+    - regex: 'BQS-5025[);/ ]'
       model: 'High Way'
-    - regex: 'BQ(ru)?-5022'
+    - regex: 'BQ(?:ru)?-5022[);/ ]'
       model: 'Bond'
-    - regex: 'BQ-5015L'
+    - regex: 'BQ-5015L[);/ ]'
       model: 'First'
-    - regex: 'BQ-5012L'
+    - regex: 'BQ-5012L[);/ ]'
       model: 'Rich'
-    - regex: 'BQS-5011'
+    - regex: 'BQS-5011[);/ ]'
       model: 'Monte Carlo'
-    - regex: 'BQ-5010G'
+    - regex: 'BQ-5010G[);/ ]'
       model: 'Spot'
-    - regex: 'BQS-5010'
+    - regex: 'BQS-5010[);/ ]'
       model: 'Prague'
-    - regex: 'BQ-5009L'
+    - regex: 'BQ-5009L[);/ ]'
       model: 'Trend'
-    - regex: 'BQS-500[59]'
+    - regex: 'BQS-500[59][);/ ]'
       model: 'Sydney'
-    - regex: 'BQ-5008L'
+    - regex: 'BQ-5008L[);/ ]'
       model: 'Brave'
-    - regex: 'BQ-5007L'
+    - regex: 'BQ-5007L[);/ ]'
       model: 'Iron'
-    - regex: 'BQS-5006'
+    - regex: 'BQS-5006[);/ ]'
       model: 'Los Angeles'
-    - regex: 'BQ-(?:5005L|5530L)'
+    - regex: 'BQ-(?:5005L|5530L)[);/ ]'
       model: 'Intense'
-    - regex: 'BQS-5004'
+    - regex: 'BQS-5004[);/ ]'
       model: 'Paris'
-    - regex: 'BQ-5003L'
+    - regex: 'BQ-5003L[);/ ]'
       model: 'Shark Pro'
-    - regex: 'BQ-5002G'
+    - regex: 'BQ-5002G[);/ ]'
       model: 'Fun'
-    - regex: 'BQS-5002'
+    - regex: 'BQS-5002[);/ ]'
       model: 'Colombo'
-    - regex: 'BQ-5001L'
+    - regex: 'BQ-5001L[);/ ]'
       model: 'Contact'
-    - regex: 'BQS-5001'
+    - regex: 'BQS-5001[);/ ]'
       model: 'Milan'
-    - regex: 'BQ(ru|S)?-5000'
+    - regex: 'BQ(?:ru|S)?-5000[);/ ]'
       model: 'Tokyo'
-    - regex: 'BQS-4800'
+    - regex: 'BQS-4800[);/ ]'
       model: 'Blade'
-    - regex: 'BQS-4707'
+    - regex: 'BQS-4707[);/ ]'
       model: 'Montreal'
-    - regex: 'BQS-4702'
+    - regex: 'BQS-4702[);/ ]'
       model: 'Оsaka'
-    - regex: 'BQS-4701'
+    - regex: 'BQS-4701[);/ ]'
       model: 'Venice'
-    - regex: 'BQ-(?:4585|5011G)'
+    - regex: 'BQ-(?:4585|5011G)[);/ ]'
       model: 'Fox View'
-    - regex: 'BQS-4570'
+    - regex: 'BQ(?:ru)?-4583[);/ ]'
+      model: 'Fox Power'
+    - regex: 'BQS-4570[);/ ]'
       model: 'Drive'
-    - regex: 'BQS-4560'
+    - regex: 'BQS-4560[);/ ]'
       model: 'Golf'
-    - regex: 'BQS-4555'
+    - regex: 'BQS-4555[);/ ]'
       model: 'Turbo'
-    - regex: 'BQS-4550'
+    - regex: 'BQS-4550[);/ ]'
       model: 'Richmond'
-    - regex: 'BQ(ru)?-(?:4526|5004G)'
+    - regex: 'BQ(?:ru)?-(?:4526|5004G)[);/ ]'
       model: 'Fox'
-    - regex: 'BQS-4525'
+    - regex: 'BQS-4525[);/ ]'
       model: 'Vienna'
-    - regex: 'BQS-4516'
+    - regex: 'BQS-4516[);/ ]'
       model: 'Singapore'
-    - regex: 'BQS-4515'
+    - regex: 'BQS-4515[);/ ]'
       model: 'Moscow'
-    - regex: 'BQS-4510'
+    - regex: 'BQS-4510[);/ ]'
       model: 'Florence'
-    - regex: 'BQS-4505'
+    - regex: 'BQS-4505[);/ ]'
       model: 'Santiago'
-    - regex: 'BQS-4503'
+    - regex: 'BQS-4503[);/ ]'
       model: 'Dubai'
-    - regex: 'BQS-4502'
+    - regex: 'BQS-4502[);/ ]'
       model: 'Kingston'
     - regex: 'BQS-4501 Bristol'
       model: 'Bristol'
-    - regex: 'BQ-4501G'
+    - regex: 'BQ-4501G[);/ ]'
       model: 'Fox Easy'
-    - regex: 'BQ(ru)?-4500'
+    - regex: 'BQ(?:ru)?-4500[);/ ]'
       model: 'Fox LTE'
-    - regex: 'BQ-4077'
+    - regex: 'BQ-4077[);/ ]'
       model: 'Shark Mini'
-    - regex: 'BQ(ru)?-4072'
+    - regex: 'BQ(?:ru)?-4072[);/ ]'
       model: 'Strike Mini'
-    - regex: 'BQ(ru)?[- ]402[68]'
+    - regex: 'BQ(?:ru)?[- ]402[68][);/ ]'
       model: 'Up!'
-    - regex: 'BQS-4010'
+    - regex: 'BQS-4010[);/ ]'
       model: 'Aspen'
-    - regex: 'BQS-4009'
+    - regex: 'BQS-4009[);/ ]'
       model: 'Orleans'
-    - regex: 'BQS-4008'
+    - regex: 'BQS-4008[);/ ]'
       model: 'Shanghai'
-    - regex: 'BQS-4007'
+    - regex: 'BQS-4007[);/ ]'
       model: 'Valencia'
-    - regex: 'BQS-4005'
+    - regex: 'BQS-4005[);/ ]'
       model: 'Seoul'
-    - regex: 'BQS-4004'
+    - regex: 'BQS-4004[);/ ]'
       model: 'Dusseldorf'
-    - regex: 'BQS-4003'
+    - regex: 'BQS-4003[);/ ]'
       model: 'Verona'
-    - regex: 'BQ-4001G'
+    - regex: 'BQ-4001G[);/ ]'
       model: 'Cool'
-    - regex: 'BQS-4001'
+    - regex: 'BQS-4001[);/ ]'
       model: 'Oxford'
-    - regex: 'BQS-3510'
+    - regex: 'BQS-3510[);/ ]'
       model: 'Aspen Mini'
-    - regex: 'BQS-3503'
+    - regex: 'BQS-3503[);/ ]'
       model: 'Bombay'
-    - regex: 'BQ-1085L'
+    - regex: 'BQ-1085L[);/ ]'
       model: 'Hornet Max Pro'
       device: 'tablet'
-    - regex: 'BQ-1084L'
+    - regex: 'BQ-1084L[);/ ]'
       model: 'Hornet Max'
       device: 'tablet'
-    - regex: 'BQ-1083G'
+    - regex: 'BQ-1083G[);/ ]'
       model: 'Armor Pro Plus'
       device: 'tablet'
-    - regex: 'BQ-1082G'
+    - regex: 'BQ-1082G[);/ ]'
       model: 'Armor Pro'
       device: 'tablet'
-    - regex: 'BQ-1077L'
+    - regex: 'BQ-1077L[);/ ]'
       model: 'Armor Pro LTE'
       device: 'tablet'
-    - regex: 'BQ(ru)?-1057L'
+    - regex: 'BQ(?:ru)?-1057L[);/ ]'
       model: 'Passion'
       device: 'tablet'
-    - regex: 'BQ-1051G'
+    - regex: 'BQ-1051G[);/ ]'
       model: 'Corsika'
       device: 'tablet'
-    - regex: 'BQ-1050G'
+    - regex: 'BQ-1050G[);/ ]'
       model: 'Hawaii'
       device: 'tablet'
-    - regex: 'BQ-1008G'
+    - regex: 'BQ-1008G[);/ ]'
       model: 'Grace'
       device: 'tablet'
     - regex: 'Aquaris M8'
       model: 'Aquaris M8'
       device: 'tablet'
-    - regex: 'BQ(ru)?[_ ]5590'
+    - regex: 'BQ(?:ru)?[_ ]5590[);/ ]'
       model: 'Spring'
-    - regex: 'BQ(S)?-(6016L|5520)'
+    - regex: 'BQ[S]?-(?:6016L|5520)[);/ ]'
       model: 'Mercury'
-    - regex: 'BQ(S|ru)?-(5701L|5060)'
+    - regex: 'BQ(?:S|ru)?-(?:5701L|5060)[);/ ]'
       model: 'Slim'
     - regex: '(BQ-7850|BQ-700[12]G|BQ-8002G|BQ-905[12]G|BQ-9702G|BQ-7056G)'
       model: '$1'
       device: 'tablet'
-    - regex: 'BQ-8006G'
+    - regex: 'BQ-8006G[);/ ]'
       model: 'Java'
       device: 'tablet'
-    - regex: 'BQ-7062G'
+    - regex: 'BQ-7062G[);/ ]'
       model: 'Fiji'
       device: 'tablet'
-    - regex: 'BQ(ru)?-1081G'
+    - regex: 'BQ(?:ru)?-1081G[);/ ]'
       model: 'Grace 3G'
       device: 'tablet'
-    - regex: 'BQ-7802G'
+    - regex: 'BQ-7802G[);/ ]'
       model: 'Luzon'
       device: 'tablet'
-    - regex: 'BQ-7008G'
+    - regex: 'BQ-7008G[);/ ]'
       model: 'Clarion'
       device: 'tablet'
-    - regex: 'BQ-7064G'
+    - regex: 'BQ-7064G[);/ ]'
       model: 'Fusion'
       device: 'tablet'
-    - regex: 'BQ-7050G'
+    - regex: 'BQ-7050G[);/ ]'
       model: 'Malta'
       device: 'tablet'
-    - regex: 'BQ-7000G'
+    - regex: 'BQ-7000G[);/ ]'
       model: 'Сharm'
       device: 'tablet'
-    - regex: 'BQ-7005G'
+    - regex: 'BQ-7040G[);/ ]'
+      model: 'Сharm Plus'
+      device: 'tablet'
+    - regex: 'BQ-7005G[);/ ]'
       model: 'Maui'
       device: 'tablet'
-    - regex: 'BQ-7098G'
+    - regex: 'BQ-7098G[);/ ]'
       model: 'Armor Power'
       device: 'tablet'
-    - regex: 'BQ-1007'
+    - regex: 'BQ-1007[);/ ]'
       model: 'Necker'
       device: 'tablet'
-    - regex: 'BQ-1045(G)?'
+    - regex: 'BQ-1045[G]?[);/ ]'
       model: 'Orion'
       device: 'tablet'
-    - regex: 'BQ-1054L'
+    - regex: 'BQ-1054L[);/ ]'
       model: 'Nexion'
       device: 'tablet'
-    - regex: 'BQ(ru)?-7083'
+    - regex: 'BQ(?:ru)?-7083[);/ ]'
       model: '7083'
       device: 'tablet'
-    - regex: 'BQ(ru)?-1056L'
+    - regex: 'BQ(?:ru)?-1056L[);/ ]'
       model: '1056L'
       device: 'tablet'
-    - regex: 'BQ(ru)?-1022l'
+    - regex: 'BQ(?:ru)?-1022l[);/ ]'
       model: 'Armor Pro LTE+'
       device: 'tablet'
     - regex: '(?:bq )?(Aquaris[^/;]*) Build'
@@ -4549,11 +4556,13 @@ Sony:
 
 # Ergo
 Ergo:
-  regex: 'ERGO|(V550[_ ]Vision|B502 Basic|B504[_ ]Unit|A502[_ ]Aurum|A503[ _]Optima|Prime B400|A551 Sky 4G|A553 Power|A555 Universe|Force F500|GoTab GBT9|GoTab Gti8|V551[ _]Aura|V540_Level|V570_BIG_BEN|B506[_ ]INTRO)'
+  regex: 'ERGO|(V550[_ ]Vision|B502 Basic|B504[_ ]Unit|A502[_ ]Aurum|A503[ _]Optima|Prime B400|A551 Sky 4G|A553 Power|A555 Universe|Force F500|GoTab GBT9|GoTab Gti8|V551[ _]Aura|V540_Level|V570_BIG_BEN|B506[_ ]INTRO|A503-Optima)'
   device: 'smartphone'
   models:
     - regex: 'B502 Basic'
       model: 'B502 Basic'
+    - regex: 'A503-Optima'
+      model: 'B503 Optima'
     - regex: 'B506[_ ]INTRO'
       model: 'B506 Intro'
     - regex: 'V550[_ ]Vision'
@@ -11339,7 +11348,7 @@ Plum:
 
 # Polaroid
 Polaroid:
-  regex: 'Polaroid|(?:PMID|MIDC)[0-9a-z]+[);/ ]|MID(?:1014|0714)|PRO[VG]?(?:[0-9]{3,}[a-z]*|[0-9]{2}[a-z])|P(400[56]|4526|500[56]|502[56]|504[67]|552[56])A|PSPC(505|550)|PSPCK21NA|PSPCL20A0|PSPCM20A0|PSPCZ20A0'
+  regex: 'Polaroid|(?:PMID|MIDC)[0-9a-z]+[);/ ]|MID(?:1014|0714)|PRO[VG]?(?:[0-9]{3,}[a-z]*|[0-9]{2}[a-z])|(?:P(?:400[56]|4526|500[56]|502[56]|504[67]|552[56])A|PSPC(?:505|550|[MZL]20A0|K21NA)|SIGMA 5)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -11381,6 +11390,8 @@ Polaroid:
       model: 'Agate'
     - regex: 'PROV350'
       model: 'ProV350'
+    - regex: 'SIGMA 5[);/ ]'
+      model: 'Sigma 5'
     - regex: 'PRO([VG]?(?:[0-9]{3,}[a-z]*|[0-9]{2}[a-z]))'
       model: 'Pro$1'
 
@@ -12386,7 +12397,7 @@ UTStarcom:
 
 # Ulefone
 Ulefone:
-  regex: 'Ulefone|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[237]|X6))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
+  regex: 'Ulefone|Gemini Pro|Power_[356]|S10_Pro|(?:Armor(?:(?:[ _])(?:[237]|X6))?|U00[78][ _]Pro|Be[ _]X|Be[ _]Touch(?:[ _][23])?|Be[ _](?:One|Pure)(?:[ _]Lite)?)[);\ ]'
   device: 'smartphone'
   models:
     - regex: 'S10_Pro'
@@ -12417,6 +12428,8 @@ Ulefone:
       model: 'Armor X6'
     - regex: 'Armor[);\ ]'
       model: 'Armor'
+    - regex: 'Gemini Pro[);\ ]'
+      model: 'Gemini Pro'
     - regex: 'Power_([356])'
       model: 'Power $1'
     - regex: 'Ulefone[_ ](X|S1[ _]Pro|S[17])[);\ ]'
@@ -15614,3 +15627,8 @@ Asano:
   device: 'tv'
   model: '32LF7130S 32.0"'
 
+# Phonemax
+Phonemax:
+  regex: 'PHONEMAX_Mars[);/ ]'
+  device: 'smartphone'
+  model: 'Mars'
