--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -14786,10 +14786,10 @@ BDF:
 
 # Highscreen
 Highscreen:
-  regex: 'HIGHSCREEN|(Easy-Power-Pro|Power Ice(?: Max)?|Razar_Pro|Power Rage(?: Evo)?|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo)|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
+  regex: 'HIGHSCREEN|(Easy-Power-Pro|Power Ice(?: Max|)?|Razar_Pro|Power Rage(?: Evo)?|Zera[ _][UFS]|Power[ _]?Five[ _]?(?:Pro|Evo)|PowerFour|BOOST II(?:se)?|FestXL)[;)/ ]'
   device: 'smartphone'
   models:
-    - regex: '(Power Ice(?: Max)?|Power Rage(?: Evo)?|Zera[ _][UFS])[;)/ ]'
+    - regex: '(Power Ice(?:[ ](?:Max|Evo))?|Power Rage(?: Evo)?|Zera[ _][UFS])[;)/ ]'
       model: '$1'
     - regex: 'PowerFivePro[;)/ ]'
       model: 'Power Five Pro'
