--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -2640,7 +2640,7 @@ Bmobile:
 
 # bq
 bq:
-  regex: 'Aquaris|bq [^/;]+ Build|BQS[-_]([0-9]{4})|(BQ(ru)?[_ -][0-9]{3,4})'
+  regex: 'Aquaris|bq [^/;]+ Build|BQS[-_]([0-9]{4})|(BQ(ru)?[_ -][0-9]{3,4})|BQ5059'
   device: 'smartphone'
   models:
     - regex: 'BQ(?:ru)?-(?:5209L|5044)[);/ ]'
@@ -2713,14 +2713,10 @@ bq:
       model: 'Spring'
     - regex: 'BQ-5700L[);/ ]'
       model: 'Space X'
-    - regex: 'BQ-5594[);/ ]'
-      model: 'Strike Power Max'
     - regex: 'BQ-(?:5591|5518G)[);/ ]'
       model: 'Jeans'
     - regex: 'BQ-5522'
       model: 'Next'
-    - regex: 'BQ(?:ru)?-5521[);/ ]'
-      model: 'Strike Power Max'
     - regex: 'BQ-5520L[);/ ]'
       model: 'Silk'
     - regex: 'BQ-5519L[);/ ]'
@@ -2741,6 +2737,8 @@ bq:
       model: 'Amsterdam'
     - regex: 'BQ(?:ru)?-5510[);/ ]'
       model: 'Strike Power Max 4G'
+    - regex: 'BQ(?:ru)?-(?:5521|5594)[);/ ]'
+      model: 'Strike Power Max'
     - regex: 'BQ-5508L[);/ ]'
       model: 'Next LTE'
     - regex: 'BQ-5507L[);/ ]'
@@ -2781,7 +2779,7 @@ bq:
       model: 'Belief'
     - regex: 'BQ[S]?-(?:5065|5340)[);/ ]'
       model: 'Choice'
-    - regex: 'BQ(?:ru)?-(?:5059|5514G)[);/ ]'
+    - regex: 'BQ(?:ru)?-?(?:5059|5514G|)[);/ ]'
       model: 'Strike Power'
     - regex: 'BQ-5058[);/ ]'
       model: 'Strike Power Easy'
@@ -3054,7 +3052,7 @@ Capitel:
 
 # Captiva
 Captiva:
-  regex: 'Captiva[ _-]([^;/]+) Build'
+  regex: 'Captiva[ _-]([^;/)]+)(?: Build|\))'
   device: 'tablet'
   model: 'Pad $1'
 
@@ -3079,6 +3077,9 @@ Casper:
       model: 'VIA $1'
     - regex: 'CASPER_VIA_E1c'
       model: 'VIA E1C'
+    - regex: 'CASPER_L10_4.5G'
+      model: 'L10 4.5G'
+      device: 'tablet'
     - regex: 'VIA[- _](T7D|S10|[LS]8|S7|T17_M|T17)[);/ ]'
       model: 'VIA $1'
       device: 'tablet'
@@ -3679,7 +3680,7 @@ Desay:
 
 # DEXP
 DEXP:
-  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|(VA[12]10|ML450|MS[56]50|BL[12]50|BS155|BS160|BS550|BS650|AL[12]40)[);/ ]'
+  regex: 'DEXP|(?:Ursus|Ixion)[ _]([^;/)]+)|H135[ _]Build|(VA[12]10|ML450|MS[56]50|BL[12]50|BS155|BS160|BS[1256]50|AL[12]40)[);/ ]'
   device: 'smartphone'
   models:
 
@@ -3698,7 +3699,7 @@ DEXP:
     - regex: 'H135[ _]Build'
       model: 'Atlas'
       device: 'desktop'
-    - regex: '(BL[12]50|BS155|BS160|BS550|BS650|AL[12]40)[);/ ]'
+    - regex: '(BL[12]50|BS155|BS160|BS[1256]50|AL[12]40)[);/ ]'
       model: '$1'
     - regex: 'DEXP[ _]([^;/]+) Build'
       model: '$1'
@@ -4890,7 +4891,7 @@ FNB:
 
 # Fujitsu
 Fujitsu:
-  regex: '(?:F-01[FHJKL]|F-02[EFGHLK]|F-03[DEFGH]|F-04[EGK]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-41A|F-11D|F-12C|M532|FARTM933KZ|901FJ)[);/ ]'
+  regex: '(?:F-01[FHJKL]|F-02[EFGHLK]|F-03[DEFGH]|F-04[EGKJ]|F-05[DEFJ]|F-06E|F-07[DE]|F-08D|F-09[DE]|F-10D|F-41A|F-11D|F-12C|M532|FARTM933KZ|901FJ)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'F-01F[);/ ]'
@@ -4953,6 +4954,8 @@ Fujitsu:
       model: 'Arrows Me F-11D'
     - regex: 'F-12C[);/ ]'
       model: 'F-12C'
+    - regex: 'F-04J[);/ ]'
+      model: 'F-04J'
 
     - regex: 'F-02F[);/ ]'
       model: 'Arrows Tab F-02F'
@@ -9903,11 +9906,11 @@ Pioneer:
 
 # Pixus
 Pixus:
-  regex: 'Pixus|(Ride[_ ]4G|Play[ _]Three[ _]v(?:[24].0|3.1))[;)\ ]'
+  regex: 'Pixus|(Ride[_ ][34]G|Play[ _]Three[ _]v(?:[24].0|3.1))[;)\ ]'
   device: 'tablet'
   models:
-    - regex: 'Ride[_ ]4G'
-      model: 'Ride 4G'
+    - regex: 'Ride[_ ]([34])G'
+      model: 'Ride $1G'
     - regex: 'Play[ _]Three[ _]v([24].0|3.1)'
       model: 'Play Three v$1'
     - regex: 'Play Two'
@@ -14146,7 +14149,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A[35] 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J|402ZT|P545|P609)[);/ ]'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Blade (A[35] 2019-T|A6 MAX|A0622)|Nubia Z9|Ctyon-A9|602ZT|MO-01J|402ZT|P545|P609)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -14190,6 +14193,8 @@ ZTE:
       model: 'Blade T2'
     - regex: '402ZT[);/ ]'
       model: 'Blade Q+'
+    - regex: 'Blade Q Lux[);/ ]'
+      model: 'Blade Q Lux'
     - regex: 'N9515[);/ ]'
       model: 'Warp Sync'
     - regex: 'N9519[);/ ]'
